# FACTS

./: .env  .env.example  CNAME  DYNAMIC_SYSTEM_GUIDE.md  GIT_INSTRUCTIONS.md  IMPROVEMENTS_SUMMARY.md  VIDEO_FORMAT_GUIDE.md  VIDEO_IMPLEMENTATION_SUMMARY.md  admin_portal.py  app.py  app_chatbot.py  app_factory.py  clean_video_test.html  config.py  convert_video.py  cookies.txt  fix_critical_issues.py  init_site_settings.py  integration_guide.py  main.py  models.py  models_extended.py  pyproject.toml  realtime_sync.py  replit.md  replit.nix  requirements.txt  simple_realtime.py  test_deadline.py  test_improvements.py  test_video.html  update_admin.py
attached_assets/: Pasted--Please-update-the-Future-Accountants-Coaching-and-Training-Services-F-A-C-T-S-website-with-the-fo-1744829887940.txt  Pasted--Task-Implement-the-recommended-changes-from-a-recent-audit-of-futureaccountants-com-au-The-goa-1745480139460.txt  Pasted-Create-a-full-stack-floating-chatbot-widget-using-Python-Flask-and-OpenAI-s-GPT-4-API-BACKEND-S-1747417615315.txt  Pasted-Create-a-fully-functional-and-mobile-responsive-website-using-HTML-CSS-and-JavaScript-for-a-busine-1744158612784.txt  Pasted-Fix-the-following-issues-across-the-entire-website-focusing-on-timer-functionality-design-cl-1745264695919.txt  Pasted-Fix-the-video-player-in-the-Meet-Your-Mentor-section-Do-not-change-any-layout-text-or-spacing--1745489459202.txt  Pasted-FutureAccountants-com-au-Full-Update-Prompt-Please-implement-the-following-frontend-backend-and-1744352656614.txt  (+8 more)
instance/: facts_local.db
routes/: auth.py
utils/: email.py  (+4 more)
(+65 files in other folders)
