[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-compress>=1.17",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "stripe>=12.0.0",
    "sendgrid>=6.11.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "flask-mail>=0.10.0",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
    "openai>=1.78.1",
    "flask-socketio>=5.5.1",
]
